# alana-win32

./: README.md
Gx4BandEQ.lv2/: Makefile  README.md
Gx4BandEQ.lv2/dsp/: equalizer.cc
Gx4BandEQ.lv2/dsp/zita-resampler-1.1.0/: resampler-table.cc
Gx4BandEQ.lv2/gui/: gx_equalizer_x11ui.c
Gx4BandEQ.lv2/plugin/: gx_equalizer.cpp  gx_equalizer.h  manifest.ttl
rkrlv2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_config_command_shaji  cmake_install.cmake
rkrlv2/lv2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
rkrlv2/src/: FPreset.C
